5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1674_1105.log
== TEST (2019-04-24 17:12:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

x = input("brasao").lower

print("Entrada",x)

if(x == lobo):
	print("Casa: Stark")
elif(x == leao):
	print("Casa: Lannister")
elif(x == veado):
	print("Casa: Baratheon")
elif(x == dragao):
	print("Casa: Targaryen")
elif(x == rosa):
	print("Casa: Tyrell")
elif(x == sol):
	print("Casa: Martell")
elif(x == lula):
	print("Casa: Greyjoy")
elif(x == esfolado):
	print("Casa: Bolton")
elif(x == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(x == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 17:13:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

x = input("brasao: ").lower

print("Entrada",x)

if(x == "lobo"):
	print("Casa: Stark")
elif(x == "leao"):
	print("Casa: Lannister")
elif(x == "veado"):
	print("Casa: Baratheon")
elif(x == "dragao"):
	print("Casa: Targaryen")
elif(x == "rosa"):
	print("Casa: Tyrell")
elif(x == "sol"):
	print("Casa: Martell")
elif(x == "lula"):
	print("Casa: Greyjoy")
elif(x == "esfolado"):
	print("Casa: Bolton")
elif(x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada <built-in method lower of str object at 0x7f95c6f73ea0>
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 17:14:07) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

x = input("brasao: ").lower

print("Entrada",x)

if(x == "lobo"):
	print("Casa: Stark")
elif(x == "leao"):
	print("Casa: Lannister")
elif(x == "veado"):
	print("Casa: Baratheon")
elif(x == "dragao"):
	print("Casa: Targaryen")
elif(x == "rosa"):
	print("Casa: Tyrell")
elif(x == "sol"):
	print("Casa: Martell")
elif(x == "lula"):
	print("Casa: Greyjoy")
elif(x == "esfolado"):
	print("Casa: Bolton")
elif(x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.140115
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada <built-in method lower of str object at 0x7f9a64657e30>
Brasao invalido
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada <built-in method lower of str object at 0x7fab6ebbe870>
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada <built-in method lower of str object at 0x7f19e4605e30>
Brasao invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 17:14:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

x = input("brasao: ").lower()

print("Entrada",x)

if(x == "lobo"):
	print("Casa: Stark")
elif(x == "leao"):
	print("Casa: Lannister")
elif(x == "veado"):
	print("Casa: Baratheon")
elif(x == "dragao"):
	print("Casa: Targaryen")
elif(x == "rosa"):
	print("Casa: Tyrell")
elif(x == "sol"):
	print("Casa: Martell")
elif(x == "lula"):
	print("Casa: Greyjoy")
elif(x == "esfolado"):
	print("Casa: Bolton")
elif(x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 17:14:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

x = input("brasao: ").lower()

print("Entrada",x)

if(x == "lobo"):
	print("Casa: Stark")
elif(x == "leao"):
	print("Casa: Lannister")
elif(x == "veado"):
	print("Casa: Baratheon")
elif(x == "dragao"):
	print("Casa: Targaryen")
elif(x == "rosa"):
	print("Casa: Tyrell")
elif(x == "sol"):
	print("Casa: Martell")
elif(x == "lula"):
	print("Casa: Greyjoy")
elif(x == "esfolado"):
	print("Casa: Bolton")
elif(x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 17:14:28) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

x = input("brasao: ").lower()

print("Entrada",x)

if(x == "lobo"):
	print("Casa: Stark")
elif(x == "leao"):
	print("Casa: Lannister")
elif(x == "veado"):
	print("Casa: Baratheon")
elif(x == "dragao"):
	print("Casa: Targaryen")
elif(x == "rosa"):
	print("Casa: Tyrell")
elif(x == "sol"):
	print("Casa: Martell")
elif(x == "lula"):
	print("Casa: Greyjoy")
elif(x == "esfolado"):
	print("Casa: Bolton")
elif(x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 17:14:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

x = input("brasao: ").lower()

print("Entrada",x)

if(x == "lobo"):
	print("Casa: Stark")
elif(x == "leao"):
	print("Casa: Lannister")
elif(x == "veado"):
	print("Casa: Baratheon")
elif(x == "dragao"):
	print("Casa: Targaryen")
elif(x == "rosa"):
	print("Casa: Tyrell")
elif(x == "sol"):
	print("Casa: Martell")
elif(x == "lula"):
	print("Casa: Greyjoy")
elif(x == "esfolado"):
	print("Casa: Bolton")
elif(x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.193377
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 17:15:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

x = input("brasao: ").lower()

print("Entrada",x)

if(x == lobo):
	print("Casa: Stark")
elif(x == leao):
	print("Casa: Lannister")
elif(x == veado):
	print("Casa: Baratheon")
elif(x == "dragao"):
	print("Casa: Targaryen")
elif(x == rosa):
	print("Casa: Tyrell")
elif(x == sol):
	print("Casa: Martell")
elif(x == lula):
	print("Casa: Greyjoy")
elif(x == esfolado):
	print("Casa: Bolton")
elif(x == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(x == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 17:15:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

x = input("brasao: ").lower()

print("Entrada",x)

if(x == "lobo"):
	print("Casa: Stark")
elif(x == "leao"):
	print("Casa: Lannister")
elif(x == "veado"):
	print("Casa: Baratheon")
elif(x == "dragao"):
	print("Casa: Targaryen")
elif(x == "rosa"):
	print("Casa: Tyrell")
elif(x == "sol"):
	print("Casa: Martell")
elif(x == "lula"):
	print("Casa: Greyjoy")
elif(x == "esfolado"):
	print("Casa: Bolton")
elif(x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 17:15:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

x = input("brasao: ").lower()

print("Entrada",x)

if(x == "lobo"):
	print("Casa: Stark")
elif(x == "leao"):
	print("Casa: Lannister")
elif(x == "veado"):
	print("Casa: Baratheon")
elif(x == "dragao"):
	print("Casa: Targaryen")
elif(x == "rosa"):
	print("Casa: Tyrell")
elif(x == "sol"):
	print("Casa: Martell")
elif(x == "lula"):
	print("Casa: Greyjoy")
elif(x == "esfolado"):
	print("Casa: Bolton")
elif(x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.157665
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 17:18:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

x = input("brasao: ").lower()

print("Entrada:",x)

if(x == "lobo"):
	print("Casa: Stark")
elif(x == "leao"):
	print("Casa: Lannister")
elif(x == "veado"):
	print("Casa: Baratheon")
elif(x == "dragao"):
	print("Casa: Targaryen")
elif(x == "rosa"):
	print("Casa: Tyrell")
elif(x == "sol"):
	print("Casa: Martell")
elif(x == "lula"):
	print("Casa: Greyjoy")
elif(x == "esfolado"):
	print("Casa: Bolton")
elif(x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.140999
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
